# check-pyproject-incremented

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml
check_pyproject_incremented/: main.py
